# wbsrv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.js  build.sh  php_build_opts  vcpkg.json
cmake/: FindSodium.cmake
include/: concurrent_cache.h  concurrent_lru_cache.h  config.h  defines.h  fastcgi.h  handler.h  interface.h  lru_cache.h  php_sapi.h  plugin.h  plugin_manager.h  templates.h  utils.h  vhost.h
include/config/: config.h
include/handler/: common.h  error.h  sapi.h  static.h
include/utils/: concurrent_lru_cache.h  lru_cache.h  utils.h
include/vhost/: vhost.h
pages/: index.html
php_ext/: build_php.sh  php_ext.cpp
plugins/: CMakeLists.txt
plugins/php_ext/: CMakeLists.txt  php_ext.cpp  php_ext.h
src/: CMakeLists.txt  config.cpp  config.h  fastcgi.cpp  handle.c  handler.cpp  lru_cache.c  main.c  main.cpp  php_sapi.cpp  utils.cpp  vhost.cpp
src/config/: VHost.cpp  general.cpp  vhost.cpp
src/ext/: plugin_loader.cpp  plugin_loader.h
src/handler/: common.cpp  error.cpp  sapi.cpp  static.cpp
src/modules/: php.cpp
src/server/: core.cpp  core.h  module.cpp  module.h  server.cpp  server.h
src/utils/: cache.cpp  cache.h  concurrent_cache.h  config.cpp  config.h  defines.h  utils.cpp  utils.h  vhost.cpp  vhost.h
src/vhost/: vhost.cpp
t/: t1.cpp
tests/: CMakeLists.txt  benchmark_concurrent_lru_cache.cpp  test_server.cpp
tests/plugin/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.h
